    . Add test for getting/setting ->autodie()
    . Add test for getting/setting ->events()
    . Add 2-arg test for ->synchronize()
    . Make ->set_visible actually use ->field()
      so it can also set select fields?!
    . Make ->set_visible also support select+option inputs

0.48 20110317
    . Implemented ->click_button() function plus tests
      Tests courtesy of WWW::Mechanize 1.66

0.47 20110311
    . Use URI::data instead of hand-rolling URI construction
    . Add missing prerequisites from LWP split-up
    + HTTP::Cookies::MozRepl can now ->set_cookie to create a cookie in Firefox
    * Bugfix: ->save_url() did not send cookies, reported and diagnosed by tcordes
    . Add test for ->save_url() and ->get() to check that they send cookies

0.46 20110222
    . Add another, more local test for large pages
    . Add hint about bufsize to Troubleshooting.pod
    . Add test that bufsize actually takes effect
    ! Somewhat experimental squashing of multiple Xpath queries into one
      query - if this breaks your code, please supply test cases!

0.45 20110208
    . eval_in_page raises errors from perspective of the caller
      instead of raising errors in Firefox.pm
    . Added ->by_id() method and { id => $id } option for
      conveniently finding elements with names that ->selector
      interprets as CSS selectors.
    . Improved tests checking fields with fancy:names
      or fancy:ids

0.44 20100130
    . Allow ->click() on <input type="image"> inputs
      (provided by ysth, thanks)
    . Bump MozRepl::RemoteObject to 0.21 for better cleanup logic

0.43 20110109
    ! Fix MozRepl::RemoteObject prerequisite version number
    ! Change event filtering logic for load progress listener to
      just pre-filter, and keep the main logic in Perl. This
      should fix intermittent crashes.
    . Add 'no_cache' option to ->get()

0.42 20110106
    . Improved subroutine coverage to 95% on WWW::Mechanize::Firefox
    . Add test for ->forms in scalar context